--- a/Leasing/Pages/AdminsPage/AdminPage.xaml
+++ b/Leasing/Pages/AdminsPage/AdminPage.xaml
@@ -56,7 +56,7 @@
                     <Button Style="{StaticResource MaterialDesignFloatingActionButton}" HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black" x:Name="CloseButton"   Margin="679,-5,0,379" Click="ExitClick" Cursor="Hand">
                         <materialDesign:PackIcon Kind="Close" Foreground="White"/>
                     </Button>
-                    <DataGrid x:Name="DataGR" Margin="22,56,22,102" AutoGenerateColumns="False">
+                    <DataGrid x:Name="DataGR" Margin="14,56,18,102" AutoGenerateColumns="False" HorizontalScrollBarVisibility="Disabled">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="НАЗВАНИЕ" Width="101" Binding="{Binding Name}"/>
                             <DataGridTextColumn Header="CРОК" Width="66" Binding="{Binding MonthCount}"/>
