--- a/Leasing/Pages/AdminsPage/AdminUsers.xaml
+++ b/Leasing/Pages/AdminsPage/AdminUsers.xaml
@@ -62,7 +62,7 @@ BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black" Click="DogovorCl
                     <Button Style="{StaticResource MaterialDesignFloatingActionButton}" HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black" x:Name="CloseButton"   Margin="679,-5,0,379" Click="ExitClick" Cursor="Hand">
                         <materialDesign:PackIcon Kind="Close" Foreground="White"/>
                     </Button>
-                    <DataGrid x:Name="DataGR" Margin="22,56,22,102" AutoGenerateColumns="False">
+                    <DataGrid x:Name="DataGR" Margin="22,56,22,102" AutoGenerateColumns="False" MouseDoubleClick="OpenProfile">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="ЛОГИН" Width="107" Binding="{Binding Login}"/>
                             <DataGridTextColumn Header="ПАРОЛЬ" Width="105" Binding="{Binding Password}"/>
