--- a/Leasing/Pages/AuthPage.xaml
+++ b/Leasing/Pages/AuthPage.xaml
@@ -28,13 +28,13 @@
                     <Ellipse HorizontalAlignment="Left" Height="174" Margin="-37,314,0,0" VerticalAlignment="Top" Width="174" Fill="#19FFFFFF"/>
                     <Ellipse HorizontalAlignment="Left" Height="174" Margin="72,279,0,0" VerticalAlignment="Top" Width="174" Fill="#19FFFFFF"/>
                     <Ellipse HorizontalAlignment="Left" Height="174" Margin="191,314,0,0" VerticalAlignment="Top" Width="174" Fill="#19FFFFFF"/>
-                    <Label Content="ДОБРО ПОЖАЛОВАТЬ" HorizontalAlignment="Left" Margin="38,106,0,0" VerticalAlignment="Top" Height="48" Width="290" Foreground="#E5FFFFFF" FontSize="36" FontFamily="Bahnschrift Condensed"/>
-                    <Rectangle HorizontalAlignment="Left" Height="100" Margin="28,-14,0,0" VerticalAlignment="Top" Width="260" RenderTransformOrigin="0.5,0.5">
+                    <Label Content="ДОБРО ПОЖАЛОВАТЬ" HorizontalAlignment="Left" Margin="38,34,0,0" VerticalAlignment="Top" Height="48" Width="290" Foreground="#E5FFFFFF" FontSize="36" FontFamily="Bahnschrift Condensed"/>
+                    <Rectangle HorizontalAlignment="Left" Height="54" Margin="-2,376,0,0" VerticalAlignment="Top" Width="138" RenderTransformOrigin="0.5,0.5">
                         <Rectangle.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform/>
                                 <SkewTransform/>
-                                <RotateTransform Angle="-14.682"/>
+                                <RotateTransform Angle="-9.432"/>
                                 <TranslateTransform/>
                             </TransformGroup>
                         </Rectangle.RenderTransform>
