--- a/Leasing/Pages/AuthPage.xaml
+++ b/Leasing/Pages/AuthPage.xaml
@@ -4,9 +4,10 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Leasing.Pages"
+
          xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="450" d:DesignWidth="830"
       Title="AuthPage">
 
 
@@ -29,7 +30,7 @@
                     <Ellipse HorizontalAlignment="Left" Height="174" Margin="72,279,0,0" VerticalAlignment="Top" Width="174" Fill="#19FFFFFF"/>
                     <Ellipse HorizontalAlignment="Left" Height="174" Margin="191,314,0,0" VerticalAlignment="Top" Width="174" Fill="#19FFFFFF"/>
                     <Label Content="ДОБРО ПОЖАЛОВАТЬ" HorizontalAlignment="Left" Margin="38,34,0,0" VerticalAlignment="Top" Height="48" Width="290" Foreground="#E5FFFFFF" FontSize="36" FontFamily="Bahnschrift Condensed"/>
-                    <Rectangle HorizontalAlignment="Left" Height="54" Margin="122,376,0,0" VerticalAlignment="Top" Width="80" RenderTransformOrigin="0.5,0.5">
+                    <Rectangle HorizontalAlignment="Left" Height="69" Margin="126,355,0,0" VerticalAlignment="Top" Width="85" RenderTransformOrigin="0.5,0.5">
                         <Rectangle.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform/>
@@ -47,9 +48,9 @@
                 <Grid Background="White" Name="RenderPages" Grid.ColumnSpan="2" Margin="285,0,0,0">
                     <PasswordBox x:Name="TxbPassword" HorizontalContentAlignment="Center" Style="{StaticResource MaterialDesignOutlinedPasswordBox}" Margin="150,208,114,174" Background="#4C673AB7" Foreground="#FF673AB7"></PasswordBox>
                     <TextBox x:Name="TxbLogin" HorizontalContentAlignment="Center" Style="{StaticResource MaterialDesignOutlinedTextBox}" Margin="150,144,114,238" Background="#4C673AB7" FontFamily="Bahnschrift Condensed" Foreground="#FF673AB7"></TextBox>
-                    <Button Content="ЗАРЕГИСТРИРОВАТЬСЯ" Style="{StaticResource MaterialDesignOutlinedButton}" HorizontalAlignment="Left" Margin="230,273,0,0" VerticalAlignment="Top" Width="146" FontSize="10" Click="RegClick"/>
-                    <Button Content="ВХОД" Style="{StaticResource MaterialDesignRaisedButton}" Margin="150,273,265,0" VerticalAlignment="Top" FontSize="10" Click="AuthClick"/>
-                    <Label Content="ВХОД" HorizontalAlignment="Left" Margin="233,87,0,0" VerticalAlignment="Top" Height="46" Width="70" Foreground="#FF6E5894" FontSize="36" FontFamily="Bahnschrift Condensed"/>
+                    <Button Content="ЗАРЕГИСТРИРОВАТЬСЯ" Style="{StaticResource MaterialDesignOutlinedButton}"  Margin="269,285,114,113"  Width="142" FontSize="10" Click="RegClick"/>
+                    <Button Content="ВХОД" Style="{StaticResource MaterialDesignRaisedButton}" Margin="150,285,261,113"  FontSize="10" Click="AuthClick"/>
+                    <Label Content="ВХОД" HorizontalAlignment="Left" Margin="246,93,0,0" VerticalAlignment="Top" Height="46" Width="70" Foreground="#FF6E5894" FontSize="36" FontFamily="Bahnschrift Condensed"/>
 
                     <materialDesign:PackIcon Kind="Account" Margin="115,153,0,0"/>
                     <materialDesign:PackIcon Kind="Lock" Margin="115,217,0,0"/>
