--- a/Leasing/Pages/AdminsPage/EditDogovor.xaml
+++ b/Leasing/Pages/AdminsPage/EditDogovor.xaml
@@ -31,7 +31,7 @@
                 <Label Content="Статус" HorizontalAlignment="Left" Margin="794,298,0,0" VerticalAlignment="Top" Height="24" Width="38" Foreground="#FF7D32FF" FontSize="14" FontFamily="Bahnschrift Condensed"/>
                 <DatePicker x:Name="datestart"  Style="{StaticResource MaterialDesignOutlinedDatePicker}" HorizontalAlignment="Left" Margin="752,163,0,0" VerticalAlignment="Top" Height="55" Width="122"/>
                 <DatePicker x:Name="dateend"  Style="{StaticResource MaterialDesignOutlinedDatePicker}" HorizontalAlignment="Left" Margin="752,0,0,0" VerticalAlignment="Center" Height="55" Width="122"/>
-                <Label Content="Редактирование активного договора лизинга" HorizontalAlignment="Left" Margin="22,19,0,0" VerticalAlignment="Top" Foreground="#E5000000" FontSize="18" FontFamily="Arial Black"/>
+                <Label Content="Редактирование договоров лизинга" HorizontalAlignment="Left" Margin="22,19,0,0" VerticalAlignment="Top" Foreground="#E5000000" FontSize="18" FontFamily="Arial Black"/>
                 <TextBox x:Name="TxbCarID" HorizontalContentAlignment="Center"   Style="{StaticResource MaterialDesignOutlinedTextBox}" HorizontalAlignment="Left" Margin="693,402,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="240" Height="52" Background="#FF6F63C5" Foreground="White"/>
                 <Label Content="Айди машины" HorizontalAlignment="Left" Margin="776,374,0,0" VerticalAlignment="Top" Height="24" Width="78" Foreground="#FF7D32FF" FontSize="14" FontFamily="Bahnschrift Condensed"/>
                 <ComboBox x:Name="combob" Style="{StaticResource MaterialDesignOutlinedComboBox}" HorizontalAlignment="Left" Margin="755,319,0,0" VerticalAlignment="Top" Width="120" Height="55">
